fix(frontend): layout issues on mobile devices tm-692

--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -151,7 +151,7 @@
 		width: 100%;
 		height: 100%;
 		min-height: 100lvh;
-		padding: 15px 33px 0;
+		padding: 50px 33px 0;
 		border-radius: unset;
 	}
 
